# hello-rust-nix

./: Cargo.toml  Dockerfile  README.md  default.nix  helloworld.nix  shell.nix
nix/: rust.nix  sources.json
src/: main.rs
