[package]
name = "helloworld"
version = "0.1.0"
authors = ["nasirhm <nasirhussainm14@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
gethostname = "0.2.1"
psutil = "3.0.1"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]
